# serializer version: 1
# name: test_script_ok[script_multi]
  '''
  query
    query_expr
      select
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            ident	table1
    query_expr
      select
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            ident	table2
  
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi]
  '''
  query
    query_expr
      select
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            ident	table1
    query_expr
      select
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            ident	table2
  
  '''
# ---
# name: test_script_ok[script_single]
  '''
  query_expr
    select
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          ident	table1
  
  '''
# ---
# name: test_script_ok[script_top_level_from]
  '''
  query_expr
    pipe_from
      from_clause
        from_item_table
          ident	table1
  
  '''
# ---
